# backend-project

./: .env  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  config.yaml  sqlx-data.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20211229180707_create_subscriptions_table.sql
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: delete.rs  health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
